data/all_generated_tests/raw_wast_tests/block_IncorrectBranchTargetResolution_1800.wast
;; 1. **Test Block with Mismatched `br` Target**:    - Create a `block` that contains a `br 1` instruction where no such label exists beyond its immediate scope.    - This tests whether branch target resolution correctly identifies and errors on invalid target indices.    - Expected result: WebAssembly should throw an error due to incorrect branch target, while wizard_engine might proceed incorrectly.

 ;; //(assert_invalid
  (module
    (func $block_with_invalid_br
      (block
        (i32.const 0)
        (br 1)
      )
    )
  )
  "invalid label"
)